fix wifi problems better wifi interface, more simple improved points timestamp